build/errors/error13.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_xml.o -MD -MP -MF .deps/hip-hip_xml.Tpo -c -o hip-hip_xml.o `test -f 'util/hip_xml.c' || echo './'`util/hip_xml.c
mv -f .deps/hip-hip_xml.Tpo .deps/hip-hip_xml.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_umh_main.o -MD -MP -MF .deps/hip-hip_umh_main.Tpo -c -o hip-hip_umh_main.o `test -f 'usermode/hip_umh_main.c' || echo './'`usermode/hip_umh_main.c
mv -f .deps/hip-hip_umh_main.Tpo .deps/hip-hip_umh_main.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_dns.o -MD -MP -MF .deps/hip-hip_dns.Tpo -c -o hip-hip_dns.o `test -f 'usermode/hip_dns.c' || echo './'`usermode/hip_dns.c
mv -f .deps/hip-hip_dns.Tpo .deps/hip-hip_dns.Po
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2    -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\"" -MT hip-hip_esp.o -MD -MP -MF .deps/hip-hip_esp.Tpo -c -o hip-hip_esp.o `test -f 'usermode/hip_esp.c' || echo './'`usermode/hip_esp.c
usermode/hip_esp.c: In function ‘hip_esp_encrypt’:
usermode/hip_esp.c:2074:7: error: implicit declaration of function ‘des_ede3_cbc_encrypt’; did you mean ‘DES_ede3_cbc_encrypt’? [-Werror=implicit-function-declaration]
       des_ede3_cbc_encrypt(&in[hdr_len],
       ^~~~~~~~~~~~~~~~~~~~
       DES_ede3_cbc_encrypt
usermode/hip_esp.c:2077:29: error: ‘des_cblock’ undeclared (first use in this function); did you mean ‘DES_cblock’?
                            (des_cblock*)cbc_iv, DES_ENCRYPT);
                             ^~~~~~~~~~
                             DES_cblock
usermode/hip_esp.c:2077:29: note: each undeclared identifier is reported only once for each function it appears in
usermode/hip_esp.c:2077:40: error: expected expression before ‘)’ token
                            (des_cblock*)cbc_iv, DES_ENCRYPT);
                                        ^
usermode/hip_esp.c: In function ‘hip_esp_decrypt’:
usermode/hip_esp.c:2474:29: error: ‘des_cblock’ undeclared (first use in this function); did you mean ‘DES_cblock’?
                            (des_cblock*)cbc_iv, DES_DECRYPT);
                             ^~~~~~~~~~
                             DES_cblock
usermode/hip_esp.c:2474:40: error: expected expression before ‘)’ token
                            (des_cblock*)cbc_iv, DES_DECRYPT);
                                        ^
cc1: all warnings being treated as errors
Makefile:1005: recipe for target 'hip-hip_esp.o' failed
make[3]: *** [hip-hip_esp.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2